<resources translatable="false">
    <string name="app_name">AndroidProjet</string>
    <string name="welcomeText">Une connexion renforcée entre les patients et les médecins pour une meilleure prise en charge personnalisée et une prise de décision éclairée.</string>
    <string name="getStartedText">Commencer</string>
    <string name="french">Français</string>
    <string name="arabe">Arabe</string>

    <string name="IdentificationTitle">Identification</string>
    <string name="IdentificationDeclare">Your information is safe with us</string>
    <string name="IntroduireCode">Merci d’introduire le code de confirmation
reçu par SMS. </string>
    <string name="precendentButton">Précédent</string>
    <string name="suivantButton">Suivant</string>
    <string name="enregistrerButton">Enregistrer</string>
    <string name="welcomeBack">Welcome Back ! </string>
    <string name="title_activity_attachs">AttachsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="professionQuestion">Quelle est votre profession ?</string>
    <string name="docteur">Docteur</string>
    <string name="patient">Patient</string>
    <string name="photoCin">Je prends ma CIN en photo</string>
    <string name="madame">Madame</string>
    <string name="monsieur">Monsieur</string>
    <string name="civilite">Civilité</string>
    <string name="nom_complet_fr">Nom complet</string>
    <string name="nom_complet_ar">الاسم الكامل</string>
    <string name="CIN_fr">CIN</string>
    <string name="CIN_ar">رقم البطاقة</string>
    <string name="star">*</string>
    <string name="adresse_actuelle_fr">Adresse Actuelle</string>
    <string name="adresse_actuelle_ar">العنوان الحالي</string>
    <string name="photo_profil">photo de profil</string>
    <string name="french_language_button">Button de lange française</string>
    <string name="arabe_language_button">Button de lange arabe</string>
    <string name="cornerImage1">corner Image</string>
    <string name="cornerImage2">corner image 2</string>
    <string name="imagePatient">image Patient</string>
    <string name="imageVet">image vet</string>
    <string name="cinImage">cin image</string>
    <string name="iconImage">icon image</string>
    <string name="numero_de_telephone">Numero de telephone</string>
    <string name="sms_de_v_rification">SMS de vérification</string>
    <string name="saisir_le_mot_de_passe">Saisir le mot de passe</string>
    <string name="sign_in">sign in</string>
    <string name="forgot_password">forgot password</string>
    <string name="veuillez_choisir_un_mot_de_passe">Veuillez choisir un mot de passe</string>
    <string name="choisir_un_mot_de_passe">choisir un mot de passe</string>
    <string name="confirmation_mot_de_passe">confirmation mot de passe</string>
    <string name="register_with_us">Register with us!</string>
    <string name="entrer_votre_nom_complet">Entrer votre nom complet</string>
    <string name="entrer_votre_num_ro_de_t_l_phone">Entrer votre numéro de téléphone</string>
    <string name="entrer_votre_email">Entrer votre Email</string>
    <string name="entrer_votre_mot_de_passe">Entrer votre mot de passe</string>
    <string name="reconfirmer_votre_mot_de_passe">Reconfirmer votre mot de passe</string>
    <string name="already_have_an_account">already have an account ?</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="welcome_back_icon">welcome back icon</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">sign up</string>
    <string name="welcomingIcon">welcomingIcon</string>
    <string name="imageForDeco">ImageForDeco</string>
    <string name="write_your_message">Ecrire votre message ..</string>
    <string name="online">online</string>
    <string name="title_activity_back_page2">BackPage2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="BesoinConsultation">Besoin d\'une consultation vétérinaire en privé ?</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_maladie1">Une maladie virale qui peut affecter les dromadaires, Elle peut causer de la fièvre, des maux de tête une maladie virale qui peut affecter les dromadaires, les bovins, les ovins et les caprins, ainsi que les humains. Elle peut causer de la fièvre, des maux de tête, des douleurs musculaires et articulaires, des vomissements et des diarrhées.
Une maladie virale qui peut affecter les dromadaires, Elle peut causer de la fièvre, des maux de tête une maladie virale qui peut affecter les dromadaires, les bovins, les ovins et les caprins, ainsi que les humains. Elle peut causer de la fièvre, des maux de tête, des douleurs musculaires et articulaires, des vomissements et des diarrhées.
Une maladie virale qui peut affecter les dromadaires, Elle peut causer de la fièvre, des maux de tête une maladie virale qui peut affecter les dromadaires, les bovins, les ovins et les caprins, ainsi que les humains. Elle peut causer de la fièvre, des maux de tête, des douleurs musculaires et articulaires, des vomissements et des diarrhées.

Une maladie virale qui peut affecter les dromadaires, Elle peut causer de la fièvre, des maux de tête une maladie virale qui peut affecter les dromadaires, les bovins, les ovins et les caprins, ainsi que les humains. Elle peut causer de la fièvre, des maux de tête, des douleurs musculaires et articulaires, des vomissements et des diarrhées.une maladie virale qui peut affecter les dromadaire.
Une maladie bactérienne qui peut être transmise des dromadaires aux humains et provoquer de la fièvre, des douleurs articulaires et musculaires, des maux de tête, de la fatigue, une perte de poids et des douleurs abdominales.articulaires et musculaires, des maux de tête, de la fatigue, une perte de poids et des douleurs abdomi...</string>
    <string name="title_activity_traitement_prescrit">TraitementPrescrit</string>

    <string-array name="hospitals">
        <item>choisi l\'hopitale</item>
        <!-- Add more items as needed -->
    </string-array>

</resources>