<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#D9D9D9"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/IdentificationTitle"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/IdentificationDeclare"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/imagepwd"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
    <ImageView
        android:id="@+id/imagepwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textviewchoix"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:src="@drawable/pwdicon" />

    <TextView
        android:id="@+id/textviewchoix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/veuillez_choisir_un_mot_de_passe"
        android:textColor="@color/orangeLight"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/textviewchoix2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagepwd" />

    <TextView
        android:id="@+id/textviewchoix2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/IntroduireCode"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pwd_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewchoix" />
    <EditText
        android:id="@+id/pwd_input"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_back"
        android:gravity="center"
        android:padding="5dp"
        android:hint="@string/choisir_un_mot_de_passe"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/pwd_input2"
        app:layout_constraintTop_toBottomOf="@+id/textviewchoix2"/>
    <EditText
        android:id="@+id/pwd_input2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_back"
        android:gravity="center"
        android:padding="5dp"
        android:hint="@string/confirmation_mot_de_passe"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/enregistrerButton"
        app:layout_constraintTop_toBottomOf="@+id/pwd_input"/>
    <Button
        android:id="@+id/enregistrerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/getstarted_button"
        android:text="@string/enregistrerButton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd_input2"
        android:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>